# event-planner-fastapi

./: .coverage  .gitignore  event_test.http  pyproject.toml  test_main.http  user_test.http
app/: .coverage  main.py  planner.db
app/auth/: authenticate.py  hash_password.py  jwt_handler.py
app/database/: .env  connection.py
app/models/: events.py  user.py
app/routes/: events.py  users.py
app/tests/: confest.py  test_login.py  test_routes.py
